<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameAnimaisDomesticos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Fragments.NaturezaAnimaisDomesticosFragment">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintAnimaisDomesticos"
        android:layout_width="match_parent"
        android:layout_height="1131dp"
        android:background="@drawable/numeros_background_white"
        tools:context=".Fragments.AlimentosFrutasFragment">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.13" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.87" />

        <TextView
            android:id="@+id/textEspacoInferior"
            android:layout_width="100dp"
            android:layout_height="10dp"
            android:layout_marginStart="55dp"
            android:layout_marginLeft="55dp"
            android:text=""
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textRepolhoTraducao"
            tools:layout_editor_absoluteY="800dp" />

        <ImageButton
            android:id="@+id/imageButtonVaca"
            android:layout_width="145dp"
            android:layout_height="130dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            android:src="@drawable/domestic_animal_cow"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/textPimentaTraducao" />

        <TextView
            android:id="@+id/textRepolhoTraducao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/vegetables_cabbage_translate"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textRepolho" />

        <TextView
            android:id="@+id/textRepolho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/vegetables_cabbage"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/imageButtonVaca" />

        <ImageButton
            android:id="@+id/imageButtonPeru"
            android:layout_width="145dp"
            android:layout_height="130dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            android:src="@drawable/domestic_animal_turkey"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textMilhoTraducao" />

        <TextView
            android:id="@+id/textCenoura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:text="@string/vegetables_carrot"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/imageButtonPeru" />

        <TextView
            android:id="@+id/textCenouraTraducao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="47dp"
            android:layout_marginLeft="47dp"
            android:text="@string/vegetables_carrot_translate"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textCenoura" />

        <ImageButton
            android:id="@+id/imageButtonPorco"
            android:layout_width="145dp"
            android:layout_height="130dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/textPepinoTraducao"
            app:srcCompat="@drawable/domestic_animal_pig" />

        <TextView
            android:id="@+id/textPimenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/vegetables_pepper"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/imageButtonPorco" /><![CDATA[
            tools:layout_editor_absoluteY="722dp" />

            ]]>

        <TextView
            android:id="@+id/textPimentaTraducao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/vegetables_pepper_translate"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textPimenta" />

        <ImageButton
            android:id="@+id/imageButtonBoi"
            android:layout_width="145dp"
            android:layout_height="130dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            android:src="@drawable/domestic_animal_ox"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textBeringelaTraducao" />

        <TextView
            android:id="@+id/textMilho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:text="@string/vegetables_corn"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/imageButtonBoi" />

        <TextView
            android:id="@+id/textMilhoTraducao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginLeft="55dp"
            android:text="@string/vegetables_corn_translate"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textMilho" />


        <ImageButton
            android:id="@+id/imageButtonOvelha"
            android:layout_width="145dp"
            android:layout_height="130dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            android:src="@drawable/domestic_animal_sheep"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/textAlfaceTraducao" />

        <TextView
            android:id="@+id/textPepino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="43dp"
            android:layout_marginRight="43dp"
            android:text="@string/vegetables_cucumber"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/imageButtonOvelha" />

        <TextView
            android:id="@+id/textPepinoTraducao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/vegetables_cucumber_translate"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textPepino" />

        <ImageButton
            android:id="@+id/imageButtonBode"
            android:layout_width="145dp"
            android:layout_height="130dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            android:src="@drawable/domestic_animal_goat"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textCebolaTraducao" />

        <TextView
            android:id="@+id/textBeringela"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:text="@string/vegetables_eggplant"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/imageButtonBode" />

        <TextView
            android:id="@+id/textBeringelaTraducao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginLeft="45dp"
            android:text="@string/vegetables_eggplant_translate"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textBeringela" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.13" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.87" />

        <ImageButton
            android:id="@+id/imageButtonCoelho"
            android:layout_width="145dp"
            android:layout_height="130dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            android:src="@drawable/domestic_animal_rabbit"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/textErvilhaTraducao" />

        <TextView
            android:id="@+id/textAlface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/vegetables_lettuce"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/imageButtonCoelho" />

        <TextView
            android:id="@+id/textAlfaceTraducao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="53dp"
            android:layout_marginRight="53dp"
            android:text="@string/vegetables_lettuce_translate"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textAlface" />

        <ImageButton
            android:id="@+id/imageButtonCavalo"
            android:layout_width="145dp"
            android:layout_height="130dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            android:src="@drawable/domestic_animal_horse"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textSaladaTraducao" />

        <TextView
            android:id="@+id/textCebola"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginLeft="55dp"
            android:text="@string/vegetables_onion"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/imageButtonCavalo" />

        <TextView
            android:id="@+id/textCebolaTraducao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:text="@string/vegetables_onion_translate"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textCebola" />

        <ImageButton
            android:id="@+id/imageButtonCachorro"
            android:layout_width="145dp"
            android:layout_height="130dp"
            android:layout_marginTop="32dp"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            android:src="@drawable/domestic_animal_dog"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textErvilha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/vegetables_pea"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/imageButtonCachorro" />

        <TextView
            android:id="@+id/textErvilhaTraducao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/vegetables_pea_translate"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textErvilha" />

        <ImageButton
            android:id="@+id/imageButtonGato"
            android:layout_width="145dp"
            android:layout_height="130dp"
            android:layout_marginTop="32dp"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            android:src="@drawable/domestic_animal_cat"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textSalada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginLeft="45dp"
            android:text="@string/vegetables_salad"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textSaladaTraducao"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/imageButtonGato" />

        <TextView
            android:id="@+id/textSaladaTraducao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:text="@string/vegetables_salat_translate"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textSalada" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

    <include layout="@layout/fragment_botao_voltar"></include>

</FrameLayout>